fix: correct service image overflowing over the screen size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,10 @@
 body {
   @apply bg-black text-white;
 }
+
+@media screen and (max-width: 460px) {
+
+  [data-aos^="fade"] {
+    transform: none !important;
+  }
+}
